changed stylesheet relation (removed css folder)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mannat Mega Store</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="E:\Great Website\HTML_Only_website\Images\LogoMakr_5vV1xY.png">
   </head>
 
